fixed overflowing text on main page

--- a/css/general.css
+++ b/css/general.css
@@ -1,6 +1,6 @@
 @media(min-width:760px){
 	#heyiggy-text > h1 {
-		font-size:54px;
+		font-size:48px;
 	}
 	#heyiggy-text > a {
 		font-size:24px;
@@ -9,7 +9,7 @@
 
 @media(min-width:1600px){
 	#heyiggy-text > h1 {
-		font-size:72px;
+		font-size:64px;
 	}
 	#heyiggy-text > a {
 		font-size:32px;
